prevent overflow

--- a/react-app/src/components/Quoteboard/QuoteBox.css
+++ b/react-app/src/components/Quoteboard/QuoteBox.css
@@ -21,6 +21,9 @@
   /* opacity: 0.5; */
   /* color: #5b5b57; */
 }
+.quoteBoxQuoteH3 {
+  overflow-x: hidden;
+}
 
 .quoteBox h1,
 .quoteBox h2,
